let's get something in place here

--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Alex Dills</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="/css/master.css" media="screen">
-
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+        <title>@V13Axel - Alex Dills</title>
+        <link rel="stylesheet" href="/css/style.css" media="screen">
+        <script src="https://use.fontawesome.com/da71fb9ad6.js"></script>
     </head>
     <body>
-        <h1>Hello, World!</h1>
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
+        <div class="wrapper">
+            <div class="centered">
+                <img src="/img/headshot.png" class="headshot">
+                <h1>@V13Axel - Alex Dills</h1>
+                <h2>Christ-Follower, Family Man, Web Developer, Gamer</h2>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/alleycat.inuburger"><i class="fa fa-facebook-square"></i></a>
+                    <a href="https://www.twitter.com/V13Axel"><i class="fa fa-twitter-square"></i></a>
+                    <a href="https://www.github.com/V13Axel"><i class="fa fa-github-square"></i></a>
+                    <a href="http://steamcommunity.com/id/v13axel/"><i class="fa fa-steam-square"></i></a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
