--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="centered">
                 <img src="/img/headshot.png" class="headshot">
                 <h1>@V13Axel - Alex Dills</h1>
-                <h2 class="tagline"><span>Christ-Follower</span><span>Family Man</span><span>Web Developer</span><span>Gamer</span></h2>
+                <div class="tagline"><span>Christ-Follower</span><span>Family Man</span><span>Web Developer</span><span>Gamer</span></div>
                 <div class="social-links">
                     <a href="https://www.facebook.com/alleycat.inuburger"><i class="fa fa-facebook-square"></i></a>
                     <a href="https://www.twitter.com/V13Axel"><i class="fa fa-twitter-square"></i></a>
