--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
         <title>@V13Axel - Alex Dills</title>
         <link rel="stylesheet" href="/css/style.css" media="screen">
         <script src="https://use.fontawesome.com/da71fb9ad6.js"></script>
+
+        <!-- icon in the highest resolution we need it for -->
+        <link rel="icon" sizes="192x192" href="/img/icon.png">
+
+        <!-- reuse same icon for Safari -->
+        <link rel="apple-touch-icon" href="/img/icon.png">
+
+        <!-- multiple icons for IE -->
+        <meta name="msapplication-square310x310logo" content="/img/icon.png">
+
+        <meta name="theme-color" content="#222222">
     </head>
     <body>
         <div class="wrapper">
